--- a/templates/500.html
+++ b/templates/500.html
@@ -1,8 +1,13 @@
+{% extends 'base.html' %}
 
-<br/>
-<center>
-<h1>500 Internal Error</h1>
-<p>Try Again...</p>
+{% block content %}
 
-</center>
+    <br/>
+    <center>
+    <h1>500 Internal Error</h1>
+    <p>Try Again...</p>
+
+    </center>
+
+{% endblock %}
 
