--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
+{% extends 'base.html' %}
 
+{% block content %}
     <h1>Hello World!</h1>
 
     <p>This is my first web page!!!!</p>
@@ -20,5 +22,6 @@
     {% endfor %}
 
     <br/><br/>
+{% endblock %}
 
 
