--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,41 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Hello World!</h1>
 
-    <p>This is my first web page!!!!</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <p>My name is {{ first_name }}</p>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <p>{{ stuff|title }}</p>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 
-    <h3>Favorite Pizza:</h3>
+    <title>Hello, world!</title>
+    <br/>
+    <img src="{{ url_for('static', filename='images/Tree.jpeg') }}" width="1400" height="600">
+  </head>
+  <body class="bg-nav">
+    <h1></h1>
 
-    {% for topping in favorite_pizza %}
+    <!-- Optional JavaScript; choose one of the two! -->
 
-        {% if tooping == 41 %}
-            {{ topping + 100 }}<br/>
-        {% else %}
-            {{ topping }} <br/>
-        {% endif %}
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    {% endfor %}
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
+</html>
 
-    <br/><br/>
+
+
 {% endblock %}
 
 
