--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #76b947;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #138d8d;">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ url_for('index') }}">Go-Operatiba!</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('user', name='Aldrin')}}">Register</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('register')}}">Register</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Login</a>
@@ -23,14 +23,13 @@
               <li><a class="dropdown-item" href="#">Contact Details</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-secondary" type="submit">Search</button>
         </form>
       </div>
     </div>
   </nav>
+  <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+  
