--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     <title>Go-Operatiba!</title>
   </head>
-  <body>
+  <body class="bg-nav">
       {% include 'navbar.html' %}
       <br/>
       <div class="container">
