--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <br/>
     <img src="{{ url_for('static', filename='images/Tree.jpeg') }}" width="1400" height="600">
   </head>
-  <body class="bg-nav">
+  <body class="bg-navs">
     <h1></h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
