--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 
-    <title>Hello, world!</title>
+    <title>Go-Operatiba!</title>
     <br/>
     <img src="{{ url_for('static', filename='images/Tree.jpeg') }}" width="1400" height="600">
   </head>
